--- a/package.json
+++ b/package.json
@@ -1,59 +1,60 @@
 {
-  "name": "gatsby-source-datocms",
-  "version": "2.2.1",
-  "description": "Gatsby source plugin for building websites using DatoCMS as data source",
-  "main": "index.js",
-  "scripts": {
-    "prettier": "prettier --write \"src/**/*.{js,jsx}\"",
-    "build": "babel src --out-dir . --ignore __tests__",
-    "watch": "babel -w src --out-dir . --ignore __tests__",
-    "prepublish": "cross-env NODE_ENV=production npm run build",
-    "test": "echo 1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-object-rest-spread": "7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "cross-env": "^6.0.3",
-    "np": "^5.1.0",
-    "prettier": "^1.18.2",
-    "react": "^16.10.2",
-    "react-helmet": "^5.2.0"
-  },
-  "dependencies": {
-    "core-js": "^3.2.1",
-    "datocms-client": ">=3.0.18",
-    "fs-extra": ">=8.1.0",
-    "humps": ">=2.0.1",
-    "imgix-url-params": "11.2.0",
-    "json-stringify-safe": ">=5.0.1",
-    "md5": "2.2.1",
-    "object-assign": "^4.1.1",
-    "object.entries": "^1.1.0",
-    "promise-queue": "2.2.5",
-    "query-string": "6.8.3",
-    "regenerator-runtime": "^0.13.3",
-    "request-promise-native": "1.0.7"
-  },
-  "keywords": [
-    "gatsby",
-    "gatsby-plugin",
-    "gatsby-source-plugin"
-  ],
-  "author": "DatoCMS <support@datocms.com>",
-  "license": "ISC",
-  "peerDependencies": {
-    "gatsby": "^2.12.1",
-    "react": "*",
-    "react-helmet": ">= 5.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sidharthachatterjee/gatsby-source-datocms.git"
-  },
-  "bugs": {
-    "url": "https://github.com/sidharthachatterjee/gatsby-source-datocms/issues"
-  },
-  "homepage": "https://github.com/sidharthachatterjee/gatsby-source-datocms#readme"
+    "name": "gatsby-source-datocms",
+    "version": "2.2.1",
+    "description": "Gatsby source plugin for building websites using DatoCMS as data source",
+    "main": "index.js",
+    "scripts": {
+        "prettier": "prettier --write \"src/**/*.{js,jsx}\"",
+        "build": "babel src --out-dir . --ignore __tests__",
+        "watch": "babel -w src --out-dir . --ignore __tests__",
+        "prepublish": "cross-env NODE_ENV=production npm run build",
+        "prepare": "cross-env NODE_ENV=production npm run build",
+        "test": "echo 1"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.6.2",
+        "@babel/core": "^7.6.2",
+        "@babel/plugin-proposal-object-rest-spread": "7.6.2",
+        "@babel/preset-env": "^7.6.2",
+        "cross-env": "^6.0.3",
+        "np": "^5.1.0",
+        "prettier": "^1.18.2",
+        "react": "^16.10.2",
+        "react-helmet": "^5.2.0"
+    },
+    "dependencies": {
+        "core-js": "^3.2.1",
+        "datocms-client": ">=3.0.18",
+        "fs-extra": ">=8.1.0",
+        "humps": ">=2.0.1",
+        "imgix-url-params": "11.2.0",
+        "json-stringify-safe": ">=5.0.1",
+        "md5": "2.2.1",
+        "object-assign": "^4.1.1",
+        "object.entries": "^1.1.0",
+        "promise-queue": "2.2.5",
+        "query-string": "6.8.3",
+        "regenerator-runtime": "^0.13.3",
+        "request-promise-native": "1.0.7"
+    },
+    "keywords": [
+        "gatsby",
+        "gatsby-plugin",
+        "gatsby-source-plugin"
+    ],
+    "author": "DatoCMS <support@datocms.com>",
+    "license": "ISC",
+    "peerDependencies": {
+        "gatsby": "^2.12.1",
+        "react": "*",
+        "react-helmet": ">= 5.0.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/sidharthachatterjee/gatsby-source-datocms.git"
+    },
+    "bugs": {
+        "url": "https://github.com/sidharthachatterjee/gatsby-source-datocms/issues"
+    },
+    "homepage": "https://github.com/sidharthachatterjee/gatsby-source-datocms#readme"
 }
